--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,6 +6,7 @@
   --light-color-alt: #9494a5;
   --primary-background-color: #21232b;
   --secondary-background-color: #2a303d;
+  --third-background-color: #394142;
   --hover-light-color: var(--light-color);
   --hover-dark-color: var(--primary-background-color);
   --shadow: 0 4px 6px -1px rgba(0, 0, 0, 1);
@@ -71,6 +72,7 @@ body.light-theme{
   --light-color-alt: rgba(0, 0, 0, .6);
   --primary-background-color: #FFF4E3;
   --secondary-background-color: #bbafaf;
+  --third-background-color: #967B7B;
   --hover-light-color: rgb(34, 33, 33);
 }
 
@@ -103,6 +105,7 @@ body.light-theme .moon-icon{
 .header{
   background-color: var(--secondary-background-color);
   position: fixed; /*Makes header always visible even when scrolling*/
+  z-index: 99;
   top: 0;
   left: 0;
   width: 100%; /*Fixes width that <position: fixed> reduces*/
@@ -235,13 +238,14 @@ body.light-theme .moon-icon{
 .main-body{
   position: relative;
   display: block;
-  z-index: -1;
+  z-index: 0;
   top: 9rem;
 }
 
 #database-buttons-container{
   display: flex;
   justify-content: center;
+  gap: var(--gap)
 }
 
 .main-body-btn{
@@ -253,3 +257,85 @@ body.light-theme .moon-icon{
   box-shadow: var(--shadow);
 }
 
+.content-container{
+  display: flex;
+  padding: 3rem;
+  position: relative;
+  justify-content: center;
+  top: 3rem;
+  background-color: var(--secondary-background-color);
+}
+
+/*
+.hidden-default{
+  display: none;
+}
+*/
+
+.content-container > .hidden-default{
+  display: none;
+}
+
+.content-container > div {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+#database-content{
+  width: inherit;
+}
+
+#database-content > li{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
+  padding-block: 3rem;
+  width: inherit;
+  background-color: var(--third-background-color);
+}
+
+.content-main-btns{
+  top: 1.2rem;
+  padding: 0 2rem;
+  position: absolute;
+  width: inherit;
+  display: flex;
+  justify-content: space-between;
+}
+
+.content-main-btns > button > i{
+  font-size: var(--font-size-sm);
+}
+
+.content-name{
+  font-size: var(--font-size-lg);
+  color: var(--light-color);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.show-transcript,
+.show-images{
+  transition: display .5s;
+}
+
+.hide-transcript,
+.hide-images{
+  display: none;
+}
+
+.content-btn > i{
+  font-size: var(--font-size-sm);
+}
+
+.content-btn.showing-images .show-images,
+.content-btn.showing-transcript .show-transcript{
+  display: none;
+}
+
+.content-btn.showing-images .hide-images,
+.content-btn.showing-transcript .hide-transcript{
+  display: block;
+}
